p2/multi_apps/ingress.yaml
# Kubernetes Ingress docs:
# - https://kubernetes.io/docs/reference/kubernetes-api/service-resources/ingress-v1/
# - https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-app-ingress

spec:
  rules:
    # Default
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app3-service
                port:
                  name: app3-s-port
    # Specific Hosts
    - host: app1.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-service
                port:
                  name: app1-s-port
    - host: app2.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  name: app2-s-port
